# hyper-function

./: .gitignore  LICENSE  README.md  commitlint.config.js  package.json
.github/workflows/: node.yml
core/: Cargo.toml
core/src/: codec.rs  lib.rs
core/src/codec/: u8_args.rs
core/src/gateway/: gateway.rs  transport.rs
core/src/server/: server.rs  socket.rs  transport.rs
java/: design.java
node/: .gitignore  Cargo.toml  core.d.ts  core.js  package.json  tsconfig.json
node/examples/simple-app/: app.js
node/src/: context.ts  index.ts  model.ts  msgpack.ts  package.ts
node/src-rs/: lib.rs
python/: Cargo.toml  design.py  setup.py
python/hfn/: __init__.py  context.py  hfn.py  model.py  package.py
python/src/: lib.rs
src/codec/: json_config.rs  mod.rs
src/gateway/: mod.rs
src/server/: mod.rs  socket.rs  transport.rs
