[package]
name = "hyper-function-core"
description = "Hyper Function"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp = "^0.8"
rmp-serde = "1"
url = "2"
tokio-tungstenite = { version = "0.16", features=["connect", "__rustls-tls"] }
rustls = "0.20"
futures-util = "0.3"
nanoid = "0.4"
chrono = "0.4"
