[package]
name = "hfn-core"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
path = "src-rs/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = {version="2", features=["tokio_rt"]}
napi-derive = "2"
hyper-function-core = { path = "../core" }
futures = "0.3"

[build-dependencies]
napi-build = "1"
